--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,7 +3,7 @@
 
     <% if @projects.count == 0 %>
       <h3>You Have No Projects</h3>
-      <p><%= link_to "Add a New Project", new_project_path, class: "btn btn-sm btn-primary"%></p>
+      <p><%= link_to "Add a New Project", new_project_path, class: "btn btn-sm"%></p>
     <% else %>
       <div class="row">
         <h1>
