--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -7,9 +7,9 @@
         </div>
       </div>
 
-      <div class="col-md-8 project-description">
+      <div class="col-md-8 project-description-index">
         <h3><%= link_to project.name, project %></h3>
-        <div class="project-summary"><%= truncate(project.description, length: 400)%></div>
+        <div class="project-summary"><%= truncate(project.description, length: 500) %></div>
       </div>
     </div>
   </div>
