--- a/app/views/releases/_open_release.html.erb
+++ b/app/views/releases/_open_release.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-md-8">
-    <h4><%= link_to release.title, project_release_url(release.project, release) %></h4>
+    <h4><%= link_to truncate(release.title, length: 80), project_release_url(release.project, release) %></h4>
     <p><em>Opened <%= time_ago_in_words(release.created_at) %> ago</em></p>
     <p>
-      <%= release.description %>
+      <%= truncate(release.description, length: 500) %>
     </p>
   </div>
 
