--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -1,10 +1,11 @@
-<div class="container">
-
-  <div class="jumbotron mainJumbo">
+<div class="jumbotron home-jumbotron">
+  <div class="container">
     <div class="row">
       <div class="col-md-8 info-box">
-        <h1>Bug Catcher</h1>
-        <p>Iterate through user testing faster by crowd sourcing the work</p>
+        <h1>
+          Deliver a better experience recruiting an army
+          of testers and QA engineers for your product.
+        </h1>
       </div>
       <div class="col-md-4">
         <div class="signup-card">
@@ -47,15 +48,28 @@
       </div>
     </div>
   </div>
+</div>
+
+
+<div class="container service-description">
 
   <div class="row">
     <div class="col-sm-6">
-      <div class="panel panel-users">
+      <div class="panel">
         <div class="panel-heading">
-          <h3 class="panel-title">For Testers</h3>
+          <div class="page-header">
+            <h3 class="panel-title">For Developers</h3>
+          </div>
         </div>
         <div class="panel-body">
-          Be an early adopter
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
         </div>
       </div>
     </div>
@@ -63,48 +77,42 @@
     <div class="col-sm-6">
       <div class="panel panel-users">
         <div class="panel-heading">
-          <h3 class="panel-title">For Developers</h3>
+          <div class="page-header">
+            <h3 class="panel-title">For Testers</h3>
+          </div>
         </div>
         <div class="panel-body">
-          More access to users
+          <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="row">
-
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <!-- <img src="#" alt="..."> -->
-        <div class="caption">
-          <h3>Thumbnail label</h3>
-          <p>...</p>
-          <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
-        </div>
+  <div class="row popular-projects">
+    <div class="col-sm-12">
+      <div class="page-header text-center">
+        <h3>Featured projects</h3>
       </div>
     </div>
 
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <!-- <img src="#" alt="..."> -->
-        <div class="caption">
-          <h3>Thumbnail label</h3>
-          <p>...</p>
-          <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+    <% @projects.each do |project| %>
+      <div class="col-sm-4">
+        <div class="thumbnail">
+          <%= image_tag project.logo.url(:medium) %>
+          <div class="caption">
+            <h4><%= project.name %></h4>
+          </div>
         </div>
       </div>
-    </div>
+    <% end %>
 
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <!-- <img src="#" alt="..."> -->
-        <div class="caption">
-          <h3>Thumbnail label</h3>
-          <p>...</p>
-          <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
-        </div>
-      </div>
-    </div>
   </div>
+
 </div>
