--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -4,7 +4,7 @@
       <div class="col-md-8 info-box">
         <h1>
           Deliver a better experience recruiting an army
-          of testers and QA engineers for your product.
+          of testers and QA engineers to your product.
         </h1>
       </div>
       <div class="col-md-4">
