--- a/app/assets/stylesheets/static_page.scss
+++ b/app/assets/stylesheets/static_page.scss
@@ -1,5 +1,5 @@
 .home-jumbotron {
-  background: image-url('home-jumbotron.jpg') no-repeat;
+  background: image-url('home-jumbotron1.jpg') no-repeat;
   background-size: cover;
 
   .info-box h1 {
@@ -7,19 +7,20 @@
     line-height: 1.2em;
     font-weight: bold;
     color: #FFF;
+    text-shadow: 3px 3px 0 rgba(0,0,0,0.5);
     text-align: left;
-    text-shadow: 2px 2px 2px rgba(0,0,0, 0.6);
+    max-width: 680px;
   }
 
   @media screen and (min-width: 768px) {
-    padding: 100px 0;
+    padding: 120px 0;
   }
 }
 
 .signup-card {
   width: 80%;
   margin: 0 auto;
-  background-color: rgba(255,255,255, 0.9);
+  background-color: #FFF;
   box-shadow: 5px 5px 0px rgba(0,0,0, 0.4);
   border: 1px solid rgba(0,0,0,.2);
 
@@ -32,12 +33,12 @@
       text-align: center;
       padding: 10px;
       margin-bottom: 10px;
-      background-color: rgba(238, 238, 238, 0.9);
+      background-color: #DFDFDF;
       cursor: pointer;
     }
 
     .active {
-      background-color: rgba(255,255,255, 0.0);
+      background-color: #FFF;
     }
   }
 
@@ -71,8 +72,13 @@
   }
 }
 
-.popular-projects {
-  .thumbnail {
-    border: none;
+.projects-section {
+  // background-color: rgba(236, 240, 241, 1);
+
+ .popular-projects {
+    .thumbnail {
+      border: none;
+      background: none;
+    }
   }
 }
