--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -16,21 +16,39 @@
           <div id="signup-form">
             <%= form_for(User.new, url: registration_path(:user)) do |f| %>
 
-              <%= f.email_field :email, autofocus: true, :class => "form-control", placeholder: "email" %>
-              <%= f.password_field :password, autocomplete: "off", :class => "form-control", placeholder: "password" %>
+              <%= f.email_field :email,
+                  autofocus: true,
+                  :class => "form-control",
+                  placeholder: "email" %>
+
+              <%= f.password_field :password,
+                  autocomplete: "off",
+                  :class => "form-control",
+                  placeholder: "password" %>
+
                   <% if @validatable %>
                   <em>(<%= @minimum_password_length %> characters minimum)</em>
                   <% end %>
 
-              <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control", placeholder: "confirm password" %>
+              <%= f.password_field :password_confirmation,
+                  autocomplete: "off",
+                  :class => "form-control",
+                  placeholder: "confirm password" %>
 
               <%= f.submit "Get started", :class => "btn btn-primary btn-block" %>
             <% end %>
           </div>
           <div id="signin-form">
             <%= form_for(User.new, url: session_path(:user)) do |f| %>
-              <%= f.email_field :email, autofocus: true, :class => "form-control", placeholder: "email" %>
-              <%= f.password_field :password, autocomplete: "off", :class => "form-control", placeholder: "password" %>
+              <%= f.email_field :email,
+                  autofocus: true,
+                  :class => "form-control",
+                  placeholder: "email" %>
+
+              <%= f.password_field :password,
+                  autocomplete: "off",
+                  :class => "form-control",
+                  placeholder: "password" %>
 
                 <div class="form-control remember-me">
                   <div class="col-md-6">
