--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -8,8 +8,8 @@
       </div>
 
       <div class="col-md-8 project-description-index">
-        <h3><%= link_to project.name, project %></h3>
-        <div class="project-summary"><%= truncate(project.description, length: 500) %></div>
+        <h3><%= link_to truncate(project.name, length: 60), project %></h3>
+        <div class="project-summary text-justify"><%= truncate(project.description, length: 500) %></div>
       </div>
     </div>
   </div>
