--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container project-container">
   <%= link_to "< Back to Projects", projects_url %>
   <div class="row">
     <div class="col-md-3">
@@ -18,14 +18,14 @@
     </div>
 
     <div class="col-md-8 col-md-offset-1">
-      <h2 style="margin-top: 0;"><%= truncate(@project.name, length: 50) %></h2>
+      <h3 style="margin-top: 0;"><%= truncate(@project.name, length: 60) %></h3>
       <hr/>
       <p class="project-description text-justify"><%= truncate(@project.description, length: 500) %></p>
     </div>
   </div>
 
   <div class="row">
-    <h4 class="page-header text-left">Project Screenshots:</h4>
+    <h3 class="page-header text-left">Project Screenshots:</h3>
     <% if @screenshots.empty? %>
       <div class="add-image-container add-screenshot-container">
         <%= link_to "Add some screenshots of your project", "#" %>
@@ -41,13 +41,13 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h2 class="page-header">Releases
+      <h3 class="page-header">Releases
         <small>
           <% if @project.owner == current_user %>
             <%= link_to 'Add New Release', new_project_release_url(@project), class: "btn btn-sm" %>
           <% end %>
         </small>
-      </h2>
+      </h3>
     </div>
   </div>
   <% if @project.releases.any? %>
