--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
-      <h1>Edit</h1>
+    <div class="col-md-8 col-md-offset-2">
+      <h1>Edit <%= truncate(@project.name, length: 40) %></h1>
       <%= render 'form', :resource => @projects %>
     </div>
   </div>
