--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
-      <h1>New</h1>
+    <div class="col-md-8 col-md-offset-2">
+      <h1>New Project</h1>
       <%= render 'form' %>
     </div>
   </div>
