--- a/app/assets/stylesheets/bootstrap/_navbar.scss
+++ b/app/assets/stylesheets/bootstrap/_navbar.scss
@@ -1,11 +1,20 @@
 .main-header {
   margin-bottom: 40px;
   box-shadow: 0px 5px 0px rgba(0,0,0, 0.1);
+
+  a {
+    color: #FFF;
+  }
 }
 
 .navbar {
   height: 70px;
   min-height: 70px;
+}
+
+.nav > li > a:hover, .nav > li > a:focus {
+  background: transparent;
+  text-decoration: underline;
 }
 
 .navbar-brand {
