--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -14,8 +14,9 @@
   <div class="row">
     <div class="col-md-12">
       <div class="page-header">
+        <%= link_to "< Back to Release", project_release_path(@report.release.project, @report.release) %>
         <h2>
-          Report #<%= @report.id %>
+          Report #<%= @report.id %> for <%= truncate(@report.release.title, length: 50) %>
           <%# unless @report.accepted_by_project_owner == nil %>
 <!--             <small>
               You have
@@ -26,19 +27,17 @@
         </h2>
         <h4>
           <small>
-            <%= @report.release.project.name %> |
-
-            <%= @report.release.title %> |
-
-            Created on <%= @report.created_at.strftime('%B %d, %Y') %> |
-
+            <p>Created on <%= @report.created_at.strftime('%B %d, %Y') %></p>
             <% if @report.author == current_user %>
-              <%= link_to "Edit Report",
-                  edit_project_release_report_url(@project, @release, @report) %> |
+              <div>
+                <%= link_to "Edit Report",
+                    edit_project_release_report_url(@project, @release, @report) %> |
 
-              <%= link_to "Delete Report",
-                  project_release_report_url(@project, @release, @report), method: "delete" %>
+                <%= link_to "Delete Report",
+                    project_release_report_url(@project, @release, @report), method: "delete" %>
+              </div>
             <% end %>
+
           </small>
         </h4>
       </div>
@@ -48,7 +47,7 @@
     <div class="col-md-12">
       <h4><strong>Report Content</strong></h4>
       <hr/>
-      <p class="lead"><%= @report.content %></p>
+      <p class="lead text-justify"><%= truncate(@report.content, length: 500, omission: " ...Read more") %></p>
     </div>
   </div>
   <br>
