--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,8 +1,12 @@
-<%= form_for comment do |f| %>
+<%= form_for comment, url: project_release_report_path(@report), remote: true do |f| %>
   <h4>Add new comment</h4>
 
   <div class="field">
     <%= f.text_area :text %>
+    <% f.hidden_field :project_id, :value => params[:project_id] %>
+    <% f.hidden_field :report_id, :value => params[:report_id]  %>
+    <% f.hidden_field :user_id, :value => params[:id]  %>
+
   </div>
 
   <div class="actions">
