--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,7 +1,4 @@
-<%= form_for @report,
-    url: project_release_reports_url(@project, @release),
-    method: "post" do |f| %>
-
+<%= form_for [@release, @report] do |f| %>
   <%= f.label :content, "Enter your report content here", class: 'control-label' %>
   <%= f.text_area :content, class: 'form-control' %>
   <hr/>
