WIP on comments

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -49,12 +49,14 @@
     </div>
   </div>
   <br>
+
   <div class="row">
     <div class="col-md-12">
       <h4><strong>Discussion</strong></h4>
       <hr/>
-      <%#= render "comments/form", comment: @comment %>
+      <%= render "comments/form", comment: @comment %>
     </div>
   </div>
+
 </div>
 
