--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -109,5 +109,65 @@
           </div>
       </div>
     </div>
+    </div>
   </form>
 <% end %>
+
+<%= form_for(current_user, url: registration_path(current_user), html: { method: :put, :class => "form-horizontal" }) do |f| %>
+    <ul>
+        <% current_user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+
+    <div class="form-group">
+      <%= f.label :email, "Email", :class => "col-sm-offset-1 col-sm-2 control-label" %>
+      <div class="col-sm-6">
+      <%= f.email_field :email, autofocus: true, :class => "form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :current_password, "Current Password", :class => "col-sm-offset-1 col-sm-2 control-label"  %>
+      <div class="col-sm-6">
+      <%= f.password_field :current_password, autocomplete: "off", :class => "form-control" %>
+      <i>(we need your current password to confirm your changes)</i>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password, "New Password", :class => "col-sm-offset-1 col-sm-2 control-label" %>
+      <div class="col-sm-6">
+      <%= f.password_field :password, autocomplete: "off", :class => "form-control" %>
+        <% if @validatable %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %>
+        <i>(leave blank if you don't want to change it)</i>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password_confirmation, "New Password Confirmation", :class => "col-sm-offset-1 col-sm-2 control-label" %>
+      <div class="col-sm-6">
+      <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control" %>
+      </div>
+    </div>
+
+
+
+    <div class="form-group">
+      <div class="col-sm-offset-4 col-sm-4">
+      <%= f.submit "Update", :class => "btn btn-success btn-block" %>
+      </div>
+    </div>
+
+    <% end %>
+
+    <hr>
+    <h3>Cancel my account</h3>
+
+    <p>Unhappy? <%= button_to "Cancel my account", registration_path(current_user), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+    <%= link_to "Back", :back %>
+
+
