--- a/app/views/leaderboard/index.html.erb
+++ b/app/views/leaderboard/index.html.erb
@@ -1,2 +1,47 @@
-<h1>Leaderboard#index</h1>
-<p>Find me in app/views/leaderboard/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <h1>Leaderboard</h1>
+      <img  src="http://blog.credly.com/wp-content/uploads/2013/11/badgeos-leaderboard.png"
+            class="img-circle text-center" style="height: 150px;">
+    </div>
+  </div>
+
+  <div class="row">
+    <hr/>
+    <div class="col-md-4 col-md-offset-4 text-center">
+      <p>Leaderboard Time Interval</p>
+      <%= form_tag '/leaderboard', :id => "timeForm" do %>
+        <%= select_tag :interval, options_for_select(["All Time", "Last Month"]), class: 'form-control' %>
+      <% end %>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <table class="table table-hover">
+        <thead>
+          <th>Rank</th>
+          <th>Player Name</th>
+          <th>Points</th>
+        </thead>
+        <% @leaderboard.each_with_index do |player, n| %>
+          <tr>
+            <td><%= n + 1 %></td>
+            <td><%= player[:user].email %></td>
+            <td><%= player[:count] %></td>
+          </tr>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+      $('#interval').change();
+  });
+</script>
+
+
+
