--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -55,8 +55,15 @@
       <h4><strong>Discussion</strong></h4>
       <hr/>
       <%= render "comments/form", comment: @comment %>
+      <hr>
+      <div class="col-sm-6">
+      <% @comments.each do |comment| %>
+        <ul class="list-group-item"><strong><%= comment.user.email %></strong>
+          <li class="list-group-item"><p><%= comment.text %></p></li>
+        </ul>
+        <% end %>
+      </div>
     </div>
   </div>
-
 </div>
 
